--- a/project.html
+++ b/project.html
@@ -340,7 +340,7 @@ display: block;
 }
 .fieldset1{
     height: 100px;
-    height: 170px;
+    height: 190px;
 }
 .sherif{
     margin-top: 10px;
@@ -413,7 +413,7 @@ display: block;
 <a  class="ff" href="">الاصناف</a>
 <a  class="ff"href="">ملابس الرجالية</a>
 <a  class="ff" href="">الادوات والمعدات </a>
-<a  class="ff" href="">الادوات والمعدات </a>
+<a  class="ff" href="">الاغراض المنزلية </a>
 
 
 </div>
