--- a/project.html
+++ b/project.html
@@ -129,6 +129,9 @@
 .video1{
     text-align: right;
 }
+        .space{
+    overflow-x: 10px;
+}
 @media screen and ( max-width : 931px ){
     *{
         margin: 0px;
@@ -241,6 +244,11 @@ font-weight: bold;
 }
 .ss{
     text-align: center;
+}
+    .space{
+   
+    margin: 10px;
+    padding: 10px;
 }
 @media screen and ( max-width : 411px ){
     *{
@@ -378,6 +386,12 @@ display: block;
    margin-right: 80px;
    text-indent: 10px;
 }
+
+    .space{
+   
+    margin: 10px;
+    padding: 10px;
+}
 }
 
 
@@ -448,11 +462,11 @@ display: block;
     <br>
    <div class="video">
     <div class="cc">
-            <article><h1>The importance of sport:</h1> The benefits of sport to the human body are numerous, as it reflects on his physical, mental, and social health as well. The following is an explanation of the importance of sport:
+            <article><h1>The importance of sport</h1> The benefits of sport to the human body are numerous, as it reflects on his physical, mental, and social health as well. The following is an explanation of the importance of sport:
             </article>
         
-            <p><h1>Maintaining a healthy weight:</h1> Exercising contributes to maintaining or losing body weight, by practicing it constantly, whether through individual or group sports, as through it the body burns a number of calories,<br> and the body’s muscles are also built in a healthy way.<br> A healthy body weight is an important way to reduce the possibility of developing several diseases such as high blood pressure, diabetes, and cholesterol.</p>
-            <p><h1>Reducing stress:</h1> Sport contributes to raising the level of relaxation for individuals. It also removes negative thoughts that people may suffer from due to life pressures, as this is one of the psychological benefits of exercise. It is worth noting that when exercising, the body secretes the hormone endorphins,<br> which are responsible for improving mood. Which contributes to a feeling of relaxation and optimism
+            <p><h1>Maintaining a healthy weight</h1> Exercising contributes to maintaining or losing body weight, by practicing it constantly, whether through individual or group sports, as through it the body burns a number of calories,<br> and the body’s muscles are also built in a healthy way.<br> A healthy body weight is an important way to reduce the possibility of developing several diseases such as high blood pressure, diabetes, and cholesterol.</p>
+            <p><h1>Reducing stress</h1> Sport contributes to raising the level of relaxation for individuals. It also removes negative thoughts that people may suffer from due to life pressures, as this is one of the psychological benefits of exercise. It is worth noting that when exercising, the body secretes the hormone endorphins,<br> which are responsible for improving mood. Which contributes to a feeling of relaxation and optimism
             </p>
         </div>
          <div class="video1">
