--- a/project.html
+++ b/project.html
@@ -131,6 +131,8 @@
 }
         .space{
     overflow-x: 10px;
+            margin:10px;
+            padding:10px
 }
 @media screen and ( max-width : 931px ){
     *{
@@ -495,7 +497,7 @@ display: block;
 <h1 class="sport" dir="rtl" style="font-style: italic;text-indent: 10px;font-size: xx-large;-webkit-text-stroke: 2px rgb(25, 30, 4);color: transparent;">sport page</h1>
 </div>
 <div class="now">
-<label  class="data" >contactme:</label><a class="data"  href="mailto:heshammahmoud046@gmail.com" >heshammahmoud046@gmail.com</a><br><br></r><a  class="data"  href="tel:01095341125">01095341125</a>
+<label  class="data" >contactme:</label><a class="data"  href="mailto:heshammahmoud046@gmail.com" >heshammahmoud046@gmail.com</a>
 </div>
 </fieldset>
 
