--- a/project.html
+++ b/project.html
@@ -130,7 +130,7 @@
 .video1{
     text-align: right;
 }
- .space{
+.space{
    margin: 10px;
    padding: 10px;
    text-indent: 10px;
@@ -398,7 +398,8 @@ display: block;
    margin: 10px;
    padding: 10px;
    text-indent: 10px;
-   display: block;
+   display: inline-block;
+
 }
 }
 
