--- a/project.html
+++ b/project.html
@@ -134,6 +134,7 @@
    margin: 10px;
    padding: 10px;
    text-indent: 10px;
+    width:650px
    display: block;
 }
 @media screen and ( max-width : 931px ){
@@ -380,18 +381,13 @@ display: block;
     display: block;
 }
 .ss{
-   margin: auto;
    display: block;
-   width: 200px;
-   margin-right: 80px;
+   width: 300px;
    text-indent: 10px;
 }
 .video1{
-    float: left;
-    margin: auto;
    width: 200px;
-   margin-right: 80px;
-   text-indent: 10px;
+   text-indent: 90px;
 }
 
 .space{
@@ -399,6 +395,7 @@ display: block;
    padding: 10px;
    text-indent: 10px;
    display: inline-block;
+       width: 300px;
 
 }
 }
@@ -478,15 +475,14 @@ display: block;
             <p class="space"><p class="space"><b>>Reducing stress</b> Sport contributes to raising the level of relaxation for individuals. It also removes negative thoughts that people may suffer from due to life pressures, as this is one of the psychological benefits of exercise. It is worth noting that when exercising, the body secretes the hormone endorphins,<br> which are responsible for improving mood. Which contributes to a feeling of relaxation and optimism
             </p>
         </div>
-         <div class="video1">
+    </main>
+       <div class="video1">
              <video class="ss" controls loop au width="700px" height="300px">
                  <source src="video.mp4" type="video/mp4">
                  <source src="video.webm" type="video/webm">
                  <source src="video.ogg" type="video/ogg">
                 </div>
-                </div>
-</table>
-    </main>
+                </div>      
 <br>
 <br>
 <br>
