--- a/project.html
+++ b/project.html
@@ -260,7 +260,7 @@ font-weight: bold;
         header{
             background:linear-gradient(50deg, rgb(14, 14, 14)  ,black );
             height: 200px;
-            width: auto;
+            max-width:100%;
         }
    .ff{
  text-decoration: none;
@@ -348,7 +348,7 @@ display: block;
 .fieldset1{
     height: 100px;
     height: 190px;
-      width:auto
+      max-width:100%;
 }
 .sherif{
     margin-top: 10px;
