--- a/workoutaccessories.html
+++ b/workoutaccessories.html
@@ -57,13 +57,13 @@
         </div>
       </div>
 
-      <div class="card mb-3 mx-auto d-block border-0 mt-5 " style="max-width: 540px;">
+      <div class="card mb-3 mx-auto d-block border-0 mt-5 "  dir="rtl" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="جيم10.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body" dir="ltr">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
@@ -72,13 +72,13 @@
         </div>
       </div>
 
-      <div class="card mb-3 mx-auto d-block border-0 mt-5 " style="max-width: 540px;">
+      <div class="card mb-3 mx-auto d-block border-0 mt-5 "  dir="rtl" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="جيم2.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body" dir="ltr">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
