--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm bg-black  ">
+        <nav class="navbar navbar-expand-sm bg-light">
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hesham">
     <span class="navbar-toggler-icon"></span>
 </button>
