--- a/workoutaccessories.html
+++ b/workoutaccessories.html
@@ -96,8 +96,8 @@
 <p class="text-break text-justify text-center text-lowercase m-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem perspiciatis voluptatum a, quo nobis,<br> non commodi quia repellendus sequi nulla voluptatem dicta reprehenderit, placeat laborum ut beatae ullam suscipit veniam.</p>
 </div>
 <div class="row justify-content-center mt-4  mb-3">
-  <p class="col-2">© 2020 Copyright: </p>
-  <button class=" col-2 btn btn-primary btn-sm">workoutaccessories</button>
+  <p class="col-sm-2">© 2020 Copyright: </p>
+  <button class=" col-sm-2 btn btn-primary btn-sm">workoutaccessories</button>
   
 </div>
 
