--- a/workoutaccessories.html
+++ b/workoutaccessories.html
@@ -95,12 +95,10 @@
 <h2 class="text-center m-2"><a class="text-decoration-none " href="#">about us</a></h2>
 <p class="text-break text-justify text-center text-lowercase m-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem perspiciatis voluptatum a, quo nobis,<br> non commodi quia repellendus sequi nulla voluptatem dicta reprehenderit, placeat laborum ut beatae ullam suscipit veniam.</p>
 </div>
-    <div class="justify-content-center">
+    
 <div class="row  mt-4  mb-3">
-  <p class="col-sm-2">© 2020 Copyright: </p>
-  <button class=" col-sm-2 btn btn-primary btn-sm">workout</button>
-  
-</div>
+  <p class="col-2">© 2020 Copyright: </p>
+  <button class=" col-2 btn btn-primary btn-sm">workout</button>
 </div>
     <script src="bootstrap5.js"></script>
 </body>
