--- a/workoutaccessories.html
+++ b/workoutaccessories.html
@@ -96,9 +96,9 @@
 <p class="text-break text-justify text-center text-lowercase m-2 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem perspiciatis voluptatum a, quo nobis,<br> non commodi quia repellendus sequi nulla voluptatem dicta reprehenderit, placeat laborum ut beatae ullam suscipit veniam.</p>
 </div>
     
-<div class="row  mt-4  mb-3">
-  <p class="col-2">© 2020 Copyright: </p>
-  <button class=" col-2 btn btn-primary btn-sm">workout</button>
+<div class="row  mt-4  mb-3 ">
+  <p class="col-2 text-canter">© 2020 Copyright: </p>
+  <button class=" col-2 btn btn-primary btn-sm mx-auto d-block">workout</button>
 </div>
     <script src="bootstrap5.js"></script>
 </body>
