--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <style>
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+    html,body{
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+    }
+    header,footer{
+      width: 100%;
+      display: block;
+    }
+
+  </style>
 
     <link rel="stylesheet" href="bootstrap5.css">
     <meta charset="UTF-8">
